--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -81,11 +81,11 @@ jobs:
           file: ${{ steps.archive.outputs.path }}
           release_id: ${{ steps.get_release.outputs.id}}
         
-      - name: 📡💻 Upload to Itch.io
-        env:
-          CHANNEL: linux
-          PACKAGE: ${{ steps.archive.outputs.path }}
-          VERSION: ${{ steps.get_version.outputs.version-without-v }}
-          BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
-        if: ${{ env.BUTLER_API_KEY != '' && env.ITCHIO_USERNAME != '' && env.ITCHIO_GAME != '' }}
-        run: butler push --userversion=${VERSION} "${PACKAGE}" ${ITCHIO_USERNAME}/${ITCHIO_GAME}:${CHANNEL}
+      # - name: 📡💻 Upload to Itch.io
+      #   env:
+      #     CHANNEL: linux
+      #     PACKAGE: ${{ steps.archive.outputs.path }}
+      #     VERSION: ${{ steps.get_version.outputs.version-without-v }}
+      #     BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
+      #   if: ${{ env.BUTLER_API_KEY != '' && env.ITCHIO_USERNAME != '' && env.ITCHIO_GAME != '' }}
+      #   run: butler push --userversion=${VERSION} "${PACKAGE}" ${ITCHIO_USERNAME}/${ITCHIO_GAME}:${CHANNEL}
